Use pricer-based ownership for costs; keep owner for reporting

--- a/post_est/get_elas_div.ipynb
+++ b/post_est/get_elas_div.ipynb
@@ -703,6 +703,7 @@
     "owner_mapping_path = cfg.get(\"owner_mapping_path\")\n",
     "allow_unmapped_brands = bool(cfg.get(\"allow_unmapped_brands\", False))\n",
     "owner_map = None\n",
+    "pricer_map = None\n",
     "ownership = None\n",
     "if ownership_mode == \"owner\":\n",
     "    if not owner_mapping_path:\n",
@@ -710,22 +711,18 @@
     "    owner_map_path = Path(owner_mapping_path)\n",
     "    if not owner_map_path.is_absolute():\n",
     "        owner_map_path = (cfg_path.parent / owner_map_path).resolve()\n",
-    "    owner_map = load_owner_map(owner_map_path)\n",
+    "    owner_map = load_owner_map(owner_map_path, owner_col=\"owner\")\n",
+    "    pricer_map = load_owner_map(owner_map_path, owner_col=\"pricer\")\n",
     "    product_data = add_owner_ids(product_data, owner_map, firm_col=\"firm_ids\", owner_col=\"owner_ids\", allow_unmapped=allow_unmapped_brands)\n",
+    "    product_data = add_owner_ids(product_data, pricer_map, firm_col=\"firm_ids\", owner_col=\"pricer_ids\", allow_unmapped=allow_unmapped_brands)\n",
     "    aligned_pd = align_product_data_for_sim(results, product_data, id_col=\"product_ids\", market_col=\"market_ids\")\n",
-    "    ownership = build_owner_ownership(aligned_pd, owner_col=\"owner_ids\", market_col=\"market_ids\")\n",
+    "    ownership = build_owner_ownership(aligned_pd, owner_col=\"pricer_ids\", market_col=\"market_ids\")\n",
     "    costs = results.compute_costs(ownership=ownership)\n",
     "    markups = results.compute_markups(costs=costs)\n",
     "else:\n",
     "    costs = results.compute_costs()\n",
     "    markups = results.compute_markups(costs=costs)\n",
-    "markups = np.asarray(markups, dtype=float)\n",
-    "mask_m = np.isfinite(markups) & np.isfinite(shares) & (shares > 0)\n",
-    "avg_markup_w = np.average(markups[mask_m], weights=shares[mask_m])\n",
-    "print(f\"\\nShare-weighted average markup: {avg_markup_w:.6f}\")\n",
-    "# Calculate aggregate elasticities\n",
-    "agg_elas = results.compute_aggregate_elasticities().mean()\n",
-    "print(f\"Market elasticity: {agg_elas}\")"
+    "markups = np.asarray(markups, dtype=float)"
    ]
   },
   {
@@ -857,7 +854,7 @@
    "source": [
     "# === Save vehicle-level costs/markups with price and characteristics ===\n",
     "vehicle_cols = [\n",
-    "    \"product_ids\", \"market_ids\", \"market_year\", \"firm_ids\", \"owner_ids\",\n",
+    "    \"product_ids\", \"market_ids\", \"market_year\", \"firm_ids\", \"owner_ids\", \"pricer_ids\",\n",
     "    \"prices\", \"costs\", \"markups\",\n",
     "    \"shares\", \"sales\", \"size\", \"weight\", \"engine_size\", \"hp\", \"hpwt\", \"mpg\",\n",
     "    \"vehicle_type\", \"body_type\", \"engine_type\", \"drive_type\", \"ev\", \"hybrid\",\n",
