Update cost-side, counterfactual outputs, and paper in-text values

--- a/post_est/plot_price_coef.ipynb
+++ b/post_est/plot_price_coef.ipynb
@@ -61,6 +61,7 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "from pathlib import Path\n",
     "\n",
     "# ---------------------------------------------------\n",
     "# Extract inputs from the fitted pyblp results\n",
@@ -127,6 +128,11 @@
     "axes[1].set_ylabel(\"\u03b1_i \")\n",
     "\n",
     "plt.tight_layout()\n",
+    "\n",
+    "out_dir = Path('post_est/outputs')\n",
+    "out_dir.mkdir(parents=True, exist_ok=True)\n",
+    "fig.savefig(out_dir / 'price_coef_plots.png', dpi=300, bbox_inches='tight')\n",
+    "print('Saved: post_est/outputs/price_coef_plots.png')\n",
     "plt.show()\n"
    ]
   },
